--- a/SVMProyecto.ipynb
+++ b/SVMProyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "83ece4fe",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "020d87de",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "4       11.558279        31.997993   4.075075           0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +160,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69282e98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1684.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1510.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1891.000000</td>\n",
+       "      <td>1998.000000</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.085378</td>\n",
+       "      <td>196.733292</td>\n",
+       "      <td>21777.490788</td>\n",
+       "      <td>7.092175</td>\n",
+       "      <td>334.564290</td>\n",
+       "      <td>426.730454</td>\n",
+       "      <td>14.364335</td>\n",
+       "      <td>66.303555</td>\n",
+       "      <td>3.965800</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.683499</td>\n",
+       "      <td>31.057540</td>\n",
+       "      <td>8543.068788</td>\n",
+       "      <td>1.501045</td>\n",
+       "      <td>36.745549</td>\n",
+       "      <td>80.047317</td>\n",
+       "      <td>3.334554</td>\n",
+       "      <td>16.079320</td>\n",
+       "      <td>0.780282</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>98.452931</td>\n",
+       "      <td>320.942611</td>\n",
+       "      <td>1.683993</td>\n",
+       "      <td>203.444521</td>\n",
+       "      <td>181.483754</td>\n",
+       "      <td>4.371899</td>\n",
+       "      <td>0.738000</td>\n",
+       "      <td>1.450000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.037723</td>\n",
+       "      <td>177.823265</td>\n",
+       "      <td>15663.057382</td>\n",
+       "      <td>6.155640</td>\n",
+       "      <td>311.264006</td>\n",
+       "      <td>368.498530</td>\n",
+       "      <td>12.101057</td>\n",
+       "      <td>55.706530</td>\n",
+       "      <td>3.444062</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7.035456</td>\n",
+       "      <td>197.123423</td>\n",
+       "      <td>20809.618280</td>\n",
+       "      <td>7.090334</td>\n",
+       "      <td>333.389426</td>\n",
+       "      <td>422.229331</td>\n",
+       "      <td>14.293508</td>\n",
+       "      <td>66.542198</td>\n",
+       "      <td>3.948076</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.155510</td>\n",
+       "      <td>216.120687</td>\n",
+       "      <td>27006.249009</td>\n",
+       "      <td>8.066462</td>\n",
+       "      <td>356.853897</td>\n",
+       "      <td>480.677198</td>\n",
+       "      <td>16.649485</td>\n",
+       "      <td>77.277704</td>\n",
+       "      <td>4.496106</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>304.235912</td>\n",
+       "      <td>61227.196008</td>\n",
+       "      <td>12.653362</td>\n",
+       "      <td>460.107069</td>\n",
+       "      <td>753.342620</td>\n",
+       "      <td>28.300000</td>\n",
+       "      <td>120.030077</td>\n",
+       "      <td>6.739000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ph     Hardness        Solids  Chloramines      Sulfate  \\\n",
+       "count  1684.000000  1998.000000   1998.000000  1998.000000  1510.000000   \n",
+       "mean      7.085378   196.733292  21777.490788     7.092175   334.564290   \n",
+       "std       1.683499    31.057540   8543.068788     1.501045    36.745549   \n",
+       "min       0.000000    98.452931    320.942611     1.683993   203.444521   \n",
+       "25%       6.037723   177.823265  15663.057382     6.155640   311.264006   \n",
+       "50%       7.035456   197.123423  20809.618280     7.090334   333.389426   \n",
+       "75%       8.155510   216.120687  27006.249009     8.066462   356.853897   \n",
+       "max      14.000000   304.235912  61227.196008    12.653362   460.107069   \n",
+       "\n",
+       "       Conductivity  Organic_carbon  Trihalomethanes    Turbidity  Potability  \n",
+       "count   1998.000000     1998.000000      1891.000000  1998.000000      1998.0  \n",
+       "mean     426.730454       14.364335        66.303555     3.965800         0.0  \n",
+       "std       80.047317        3.334554        16.079320     0.780282         0.0  \n",
+       "min      181.483754        4.371899         0.738000     1.450000         0.0  \n",
+       "25%      368.498530       12.101057        55.706530     3.444062         0.0  \n",
+       "50%      422.229331       14.293508        66.542198     3.948076         0.0  \n",
+       "75%      480.677198       16.649485        77.277704     4.496106         0.0  \n",
+       "max      753.342620       28.300000       120.030077     6.739000         0.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Potability']==0].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe153817",
    "metadata": {},
    "outputs": [],
    "source": []
