--- a/SVMProyecto.ipynb
+++ b/SVMProyecto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "83ece4fe",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "020d87de",
+   "execution_count": 2,
+   "id": "0e6fc91c",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4       11.558279        31.997993   4.075075           0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,8 +160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "69282e98",
+   "execution_count": 3,
+   "id": "a020a252",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "max      753.342620       28.300000       120.030077     6.739000         0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,8 +339,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "40d8a6bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ph</th>\n",
+       "      <th>Hardness</th>\n",
+       "      <th>Solids</th>\n",
+       "      <th>Chloramines</th>\n",
+       "      <th>Sulfate</th>\n",
+       "      <th>Conductivity</th>\n",
+       "      <th>Organic_carbon</th>\n",
+       "      <th>Trihalomethanes</th>\n",
+       "      <th>Turbidity</th>\n",
+       "      <th>Potability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1101.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>985.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>1223.000000</td>\n",
+       "      <td>1278.000000</td>\n",
+       "      <td>1278.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.073783</td>\n",
+       "      <td>195.800744</td>\n",
+       "      <td>22383.991018</td>\n",
+       "      <td>7.169338</td>\n",
+       "      <td>332.566990</td>\n",
+       "      <td>425.383800</td>\n",
+       "      <td>14.160893</td>\n",
+       "      <td>66.539684</td>\n",
+       "      <td>3.968328</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.448048</td>\n",
+       "      <td>35.547041</td>\n",
+       "      <td>9101.010208</td>\n",
+       "      <td>1.702988</td>\n",
+       "      <td>47.692818</td>\n",
+       "      <td>82.048446</td>\n",
+       "      <td>3.263907</td>\n",
+       "      <td>16.327419</td>\n",
+       "      <td>0.780842</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.227499</td>\n",
+       "      <td>47.432000</td>\n",
+       "      <td>728.750830</td>\n",
+       "      <td>0.352000</td>\n",
+       "      <td>129.000000</td>\n",
+       "      <td>201.619737</td>\n",
+       "      <td>2.200000</td>\n",
+       "      <td>8.175876</td>\n",
+       "      <td>1.492207</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>6.179312</td>\n",
+       "      <td>174.330531</td>\n",
+       "      <td>15668.985035</td>\n",
+       "      <td>6.094134</td>\n",
+       "      <td>300.763772</td>\n",
+       "      <td>360.939023</td>\n",
+       "      <td>12.033897</td>\n",
+       "      <td>56.014249</td>\n",
+       "      <td>3.430909</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7.036752</td>\n",
+       "      <td>196.632907</td>\n",
+       "      <td>21199.386614</td>\n",
+       "      <td>7.215163</td>\n",
+       "      <td>331.838167</td>\n",
+       "      <td>420.712729</td>\n",
+       "      <td>14.162809</td>\n",
+       "      <td>66.678214</td>\n",
+       "      <td>3.958576</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>7.933068</td>\n",
+       "      <td>218.003420</td>\n",
+       "      <td>27973.236446</td>\n",
+       "      <td>8.199261</td>\n",
+       "      <td>365.941346</td>\n",
+       "      <td>484.155911</td>\n",
+       "      <td>16.356245</td>\n",
+       "      <td>77.380975</td>\n",
+       "      <td>4.509569</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>13.175402</td>\n",
+       "      <td>323.124000</td>\n",
+       "      <td>56488.672413</td>\n",
+       "      <td>13.127000</td>\n",
+       "      <td>481.030642</td>\n",
+       "      <td>695.369528</td>\n",
+       "      <td>23.604298</td>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>6.494249</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ph     Hardness        Solids  Chloramines     Sulfate  \\\n",
+       "count  1101.000000  1278.000000   1278.000000  1278.000000  985.000000   \n",
+       "mean      7.073783   195.800744  22383.991018     7.169338  332.566990   \n",
+       "std       1.448048    35.547041   9101.010208     1.702988   47.692818   \n",
+       "min       0.227499    47.432000    728.750830     0.352000  129.000000   \n",
+       "25%       6.179312   174.330531  15668.985035     6.094134  300.763772   \n",
+       "50%       7.036752   196.632907  21199.386614     7.215163  331.838167   \n",
+       "75%       7.933068   218.003420  27973.236446     8.199261  365.941346   \n",
+       "max      13.175402   323.124000  56488.672413    13.127000  481.030642   \n",
+       "\n",
+       "       Conductivity  Organic_carbon  Trihalomethanes    Turbidity  Potability  \n",
+       "count   1278.000000     1278.000000      1223.000000  1278.000000      1278.0  \n",
+       "mean     425.383800       14.160893        66.539684     3.968328         1.0  \n",
+       "std       82.048446        3.263907        16.327419     0.780842         0.0  \n",
+       "min      201.619737        2.200000         8.175876     1.492207         1.0  \n",
+       "25%      360.939023       12.033897        56.014249     3.430909         1.0  \n",
+       "50%      420.712729       14.162809        66.678214     3.958576         1.0  \n",
+       "75%      484.155911       16.356245        77.380975     4.509569         1.0  \n",
+       "max      695.369528       23.604298       124.000000     6.494249         1.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['Potability']==1].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fe153817",
+   "id": "70285a26",
    "metadata": {},
    "outputs": [],
    "source": []
