--- a/SVMProyecto.ipynb
+++ b/SVMProyecto.ipynb
@@ -518,8 +518,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "70285a26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Asignar variable en x; y en y'''\n",
+    "\n",
+    "X = df.drop('Potability',axis=1).values\n",
+    "y = df['Potability'].values\n",
+    "\n",
+    "''' Dividimos el conjunto de datos en un 70% para el entrenamiento y el otro 30% para la prueba '''\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=109)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "484d49af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train)\n",
+    "X_train = scaler.transform(X_train)\n",
+    "X_test = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b359ecd9",
    "metadata": {},
    "outputs": [],
    "source": []
