--- a/SVMProyecto.ipynb
+++ b/SVMProyecto.ipynb
@@ -548,8 +548,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b359ecd9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' Creamos un svm utilzando el kernel lineal '''\n",
+    "\n",
+    "clf = svm.SVC(kernel='linear')\n",
+    "\n",
+    "''' Entrenamos el modelo '''\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "''' Predecimos la respuesta para el conjunto de datos de prueba '''\n",
+    "\n",
+    "y_pred = clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce093421",
    "metadata": {},
    "outputs": [],
    "source": []
