--- a/SVMProyecto.ipynb
+++ b/SVMProyecto.ipynb
@@ -567,8 +567,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "a2ab7625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5798575788402849\n",
+      "Precision: 0.28992878942014244\n",
+      "Recall: 0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\USUARIO\\anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1318: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[570,   0],\n",
+       "       [413,   0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "''' Procedemos a evaluar el modelo '''\n",
+    "\n",
+    "''' Mide el accuracy del modelo '''\n",
+    "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))\n",
+    "\n",
+    "''' Medimos la precision para determinar el rendimiento del modelo '''\n",
+    "print(\"Precision:\", metrics.precision_score(y_test, y_pred, average='macro'))\n",
+    "\n",
+    "''' Medimos el recall el cual nos ayuda a detectar los elementos relevantes '''\n",
+    "print(\"Recall:\", metrics.recall_score(y_test, y_pred, average='macro'))\n",
+    "\n",
+    "'''  Calcular la matriz de confusión '''\n",
+    "cnf_matrix = metrics.confusion_matrix(y_test, y_pred)\n",
+    "cnf_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ce093421",
+   "id": "07c72f98",
    "metadata": {},
    "outputs": [],
    "source": []
